--- a/SRRS.ipynb
+++ b/SRRS.ipynb
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 204,
    "id": "9e1bb3b2",
    "metadata": {},
    "outputs": [],
@@ -853,13 +853,13 @@
     "# filling NaN for rating feature\n",
     "\n",
     "df_fill = df_drop.copy()\n",
-    "mean_rating = df_fill[df_fill['rating']!=0]['rating'].mean()\n",
+    "mean_rating = df_fill[df_fill['rating']!=0]['rating'].mean().round(2)\n",
     "df_fill['rating'] = df_fill['rating'].fillna(mean_rating)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 205,
    "id": "6860a609",
    "metadata": {},
    "outputs": [],
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 206,
    "id": "563e79ca",
    "metadata": {},
    "outputs": [
@@ -888,7 +888,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 207,
    "id": "35b6eef7",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        "Index(['name', 'city', 'rating', 'rating_count', 'cost', 'cuisine'], dtype='object')"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 208,
    "id": "410befc5",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1021,7 @@
        "4  Italian-American,Fast Food  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 209,
    "id": "3c71ee63",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 210,
    "id": "416a24b6",
    "metadata": {},
    "outputs": [],
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 211,
    "id": "043650c9",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 212,
    "id": "d1615a79",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1184,7 @@
        "4  Italian-American,Fast Food      None    Abohar  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 213,
    "id": "c2bc3f4e",
    "metadata": {},
    "outputs": [],
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 214,
    "id": "ecc3287d",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1288,7 @@
        "2    Abohar  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 215,
    "id": "0ba837d5",
    "metadata": {},
    "outputs": [],
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 216,
    "id": "b0c68d20",
    "metadata": {},
    "outputs": [],
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 217,
    "id": "b1f45417",
    "metadata": {},
    "outputs": [],
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 218,
    "id": "a59c9935",
    "metadata": {},
    "outputs": [],
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 219,
    "id": "58529df1",
    "metadata": {},
    "outputs": [
@@ -1434,7 +1434,7 @@
        "2       None    Beverages  "
       ]
      },
-     "execution_count": 179,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 220,
    "id": "f3523303",
    "metadata": {},
    "outputs": [],
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 221,
    "id": "31a772b3",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1542,7 @@
        "2  Beverages  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 222,
    "id": "b594ce3b",
    "metadata": {},
    "outputs": [],
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "id": "01df409c",
    "metadata": {},
    "outputs": [],
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 224,
    "id": "452a31c1",
    "metadata": {},
    "outputs": [
@@ -1649,7 +1649,7 @@
        "1  Bakery  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 225,
    "id": "072f9e89",
    "metadata": {},
    "outputs": [],
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 226,
    "id": "f6179019",
    "metadata": {},
    "outputs": [],
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 227,
    "id": "525a9179",
    "metadata": {},
    "outputs": [
@@ -1765,7 +1765,7 @@
        "2        NaN  Beverages  "
       ]
      },
-     "execution_count": 191,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 228,
    "id": "d08bdeae",
    "metadata": {},
    "outputs": [],
@@ -1786,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 229,
    "id": "f2c8846c",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1978,7 @@
        "[148332 rows x 8 columns]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 230,
    "id": "49b231c8",
    "metadata": {},
    "outputs": [],
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 231,
    "id": "092d790b",
    "metadata": {},
    "outputs": [
@@ -2009,7 +2009,7 @@
        "Text(0, 0.5, 'frequency')"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2035,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 232,
    "id": "44fee8c7",
    "metadata": {},
    "outputs": [
@@ -2045,7 +2045,7 @@
        "Text(0, 0.5, 'frequency')"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2107,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 233,
    "id": "2a44f125",
    "metadata": {},
    "outputs": [],
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 234,
    "id": "da33f8a0",
    "metadata": {},
    "outputs": [
@@ -2149,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 235,
    "id": "0f25ce3a",
    "metadata": {},
    "outputs": [
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 236,
    "id": "639c43d8",
    "metadata": {},
    "outputs": [
@@ -2243,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 237,
    "id": "ea3f38b9",
    "metadata": {},
    "outputs": [
